# MuscleForceDirection

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Branches/KULeuven/: MuscleForceDirection.cpp  MuscleForceDirection.h
Branches/MFD v2/: CMakeLists.txt  MuscleForceDirection.cpp  RegisterTypes_osimPlugin.cpp  RegisterTypes_osimPlugin.h  osimPluginDLL.h
CPP/: CMakeLists.txt
CPP/MuscleForceDirection/: CMakeLists.txt  MuscleForceDirection.cpp  MuscleForceDirection.h  RegisterTypes_osimPlugin.cpp  RegisterTypes_osimPlugin.h  osimPluginDLL.h
CPP/legacy_code/: README.md
CPP/legacy_code/OpenSim2.4/: MuscleForceDirection.cpp  RegisterTypes_osimPlugin.h
CPP/legacy_code/OpenSim2.4_prototype/: ForceDirection.cpp
CPP/legacy_code/OpenSim3.3/lib/MuscleForceDirection/: RegisterTypes_osimPlugin.h
CPP/lib/MuscleForceDirection/: CMakeLists.txt
MATLAB/: .gitignore  TEST_plugin.m  getMuscleForceDirection.m  isKinMatchingModelCoords.m  runTests_MATLAB.m
MATLAB/matlab_tool_v4.0/: .gitignore  TEST_plugin.m  getCurrentMusclePathAsMat.m  isKinMatchingModelCoords.m  printtoSTO.m  sto2Mat.m  transformVec.m
MATLAB/private/: isBodyInModel.m  isKinMatchingModelCoords.m  realizeMatStructKinematics.m  sto2Mat.m
Tags/Release 00 01 Alfred original updated for OpenSim 2.4.0/: CMakeLists.txt  ForceDirection.cpp  ForceDirection.h  RegisterTypes_osimPlugin.cpp
Tags/Release 01 00/: MuscleForceDirection.h
Trunk/Function tests in main programs/source main for trials/: CMakeLists.txt  Main.cpp
Trunk/Function tests in main programs/source main for trials 2/: CMakeLists.txt  Main_2.cpp
Trunk/MuscleForceDirection/: Plugin Checklist.txt
Trunk/Plugin Results Verification/: GLOBAL_ANATOM_MuscleForceDirection_vectors.sto  GLOBAL_EFFECT_MuscleForceDirection_vectors.sto  Kinematics.mot  LOCAL_ANATOM_MuscleForceDirection_vectors.sto  LOCAL_EFFECT_MuscleForceDirection_vectors.sto  ModelTester.osim  MuscleForceDirection Test Model_MuscleForceDirection_attachments.sto  MuscleForceDirection Test Model_MuscleForceDirection_vectors.sto  Plugin_verification.asv  Plugin_verification.m  Wrapping2.m
_simtk_releases/: README.md
_simtk_releases_docs_bin/: README.md
_test_data/Arm26/: MySetupFile.xml  elbow_flexion.mot
_test_data/MFD_tests/: testModel.osim
_test_data/gait2392/: subject01.osim
data/Arm26/: arm26_MuscleForceDirection_vectors.sto
lib/MuscleForceDirection/: MuscleForceDirection.cpp  MuscleForceDirection.h  osimPluginDLL.h
matlab_tool/: Mat2sto.m  TEST_plugin.m  _dev_deal_withMuscleWrap.m  getCurrentMusclePathAsMat.m  getMatStructColumn.m  getMuscleForceDirection.m  isBodyInModel.m  isKinMatchingModelCoords.m  isMuscleConnectedToBody.m  muscleForceDirection_plugin.m  realizeMatStructKinematics.m  runTests_MATLAB.m  sto2Mat.m
matlab_tool_v4.0/: _dev_deal_withMuscleWrap.m  getBodyorGround.m  getMuscleForceDirection.m  isBodyInModel.m  realizeMatStructKinematics.m
opensim_plugin/bitbucket/: README.md
source/: FindOpenSim.cmake
source/C++/bitbucket/lib/: CMakeLists.txt
tests/: test_checklist.txt
tests/Arm26/: MySetupFile.xml  elbow_flexion.mot
tests/MFD_tests/: Wrapping2.m
tests/gait2392/: subject01_walk1_ik.mot
(+37 files in other folders)
